@@ -6,3 +6,7 @@
   * We still can write outside edition zone (using mouse tricks)
   * Add support for Ctrl+C : example, stop current command execution
   * Implement a pager
+  * Shift + Home does'nt select the line
+  * Delete can select text outside of edition zone
+  * Allow selection outside of edition zone (event with dbl click) in order to copy
+  * Implement paste using middle key
